<resources>
    <string name="app_name">Kolkata Travel Guide</string>
    <string name="title_activity_fast_facts">Fast Facts</string>
    <string name="city_overview">City Overview</string>
    <string name="city_overview_details">Kolkata (formerly Calcutta) is the capital of India\'s West Bengal state. Founded as an East India Company trading post, it was India\'s capital under the British Raj from 1773–1911. Today it’s known for its grand colonial architecture, art galleries and cultural festivals. It’s also home to Mother House, headquarters of the Missionaries of Charity, founded by Mother Teresa, whose tomb is on site.</string>
    <string name="languages">Languages</string>
    <string name="languages_details">Bengali,English,Hindi</string>
    <string name="currency">Currency</string>
    <string name="currency_details">Indian Rupees</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_details">32 degree celcius</string>
    <string name="festivals">Festivals</string>
    <string name="festivals_details">Durga Puja</string>
    <string name="airport">Nearest Airport</string>
    <string name="airport_details">Netaji Subhas Chandra Bose International Airport</string>
    <string name="hotel_1_name">The Oberoi Grand</string>
    <string name="hotel_1_address">Dharmatala, Taltala, 15, Jawaharlal Nehru Rd, New Market Area, Kolkata, West Bengal 700013</string>
    <string name="hotel_1_description">Fondly known as the Grand Dame of Kolkata, The Oberoi Grand is situated in a prime location, unrivalled by other luxury hotels in Kolkata, near the central business district, bustling markets and cultural landmarks of the city. Dating back to the late 1880s, The Oberoi Grand, Kolkata was frequented by the leading figures of the country during colonial times and even now, hosts grand functions for Heads of State in the city\'s largest pillarless Grand Ballroom.
Guests looking for a luxury dining restaurant in Kolkata can choose between our award winning, authentic Thai restaurant, our all day dining space and our colonial style bar. Branching off the hotel\'s naturally lit walkway, each restaurant is tastefully decorated, offers unparalleled fine dining and matchless service.
The Oberoi Spa in Kolkata is open until late and offers a wide range of Eastern, Western and signature Oberoi treatments. Situated in a separate, colonial style wing of the hotel, it is a wonderful place to relax and unwind after a fulfilling day doing business or sightseeing in the City of Joy.
The Oberoi Grand, Kolkata was the first hotel to be acquired by Rai Bahadur M.S. Oberoi, founder of The Oberoi Group. Under his ownership, it became known for its classic style and modern facilities; traditions we uphold.
We offer all guests complimentary access to high speed Internet for up to four devices. Guests who book in advance and directly with us can also enjoy special rates, exclusive privileges and hotel offers. We would be happy to take care of any business requirements or ensure a relaxing holiday with loved ones. Our hotel offers are designed to ensure an unforgettable Oberoi experience.</string>
    <string name="hotel_2_name">ITC Sonar</string>
    <string name="hotel_2_address"> Opp Science City, 1 JBS Haldane Avenue, Kolkata, West Bengal 700046</string>
    <string name="hotel_2_description">ITC Sonar, has a distinctively  sleek  contemporary architectural design contrasting with the rich historical essence of Kolkata. The hotel is nestled amidst acres of land, resplendent with greenery, sunshine, and water. This luxury Business Resort is en route from the airport and a 15 minute drive from the city centre. It is a Business Resort in the urban context. One that has the efficiency of a business hotel yet the feet-up-feel of a resort. An upscale, world class, Asia’s best business Hotel set amidst resort surroundings. One that is a consonance with ITC Hotels’ ethos of reflecting “rooted in soil” but dynamic in form and philosophy.</string>
    <string name="hotel_3_name">Swissotel</string>
    <string name="hotel_3_address"> City Centre New Town, Plot No.11/5, Action Area 2 D, New Town Rajarhat, Kolkata, West Bengal 700157</string>
    <string name="hotel_3_description">Swissotel Kolkata is Kolkata’s newest five-star luxury hotel near the airport and is attached to a mall featuring shops, restaurants and a multiplex cinema. Located in Rajarhat beside the IT hub, the hotel offers a distinct mix of leisure and business facilities, and is noted for its unique offering of Swiss hospitality and attention to detail.
    Choose from 147 elegantly appointed guest rooms, including 10 suites with large open-air terraces, each with its own spectacularly exclusive outdoor Jacuzzi. Executive rooms and the Swiss Executive Club lounge provide additional luxury and exclusivity. The award-winning rooftop Sky Lounge is the jewel of the hotel’s three restaurants and bar, offering views over the city. An in-house nightclub with resident DJ attracts hip locals and guests alike. The sumptuous breakfast buffet offers a wide range of choices to energise your day.
    The business centre and two meeting rooms more than cover all your business needs. Over 1000 guests can be accommodated in cocktail/reception style in Bern, the largest pillar-free banqueting facility – and a team of event planners is on hand to help you hold the perfect wedding at Swissotel Kolkata.
    Swissotel Kolkata’s alpine-inspired Purovel Sport offers you an exclusive ambiance in which to continue your exercise routine, with a fully equipped gym and a breathtaking infinity swimming pool on the roof.
    The hotel has separate smoking and non-smoking floors, there is free internet throughout except in the banquet areas, and secure parking is also available for your vehicle during your stay.</string>
    <string name="hotel_4_name">Taj Bengal</string>
    <string name="hotel_4_address">34B, Belvedere Road, Alipore, Kolkata, West Bengal 700027</string>
    <string name="hotel_4_description">Taj Bengal is a landmark five-star hotel in downtown Kolkata, in the exclusive neighbourhood of Alipore at the heart of its cultural heritage.
    Prominent landmarks—Victoria Memorial, Royal Calcutta Race Course, Horticultural Gardens, National Library, Eden Gardens and the Alipore Zoological Gardens—are all within walking distance. It is the luxury hotel closest to government offices and most consulates. The city’s commercial centre is just two miles (three km) away; the airport, an hour’s drive.
    But for the twinkling views of the stunning Kolkata skyline, you could forget the hotel’s location in the centre of the bustling metropolis. Nestled in the city’s greenest precinct, you are in paradise, with lush flora teeming with birdlife and clear views of the Alipore Zoological Gardens.
    Designed by legendary architect Bob Fox, the architecture and interiors of the hotel are deeply inspired by the city’s famed art, culture and heritage. All around, grandeur meets understated elegance—you are awed by the lavish five-storied stone and marble atrium, bathed in glorious gold light each afternoon. Genuine antiques, priceless art, and traditional accents and colours are impeccably woven together with contemporary style and modern amenities.
    Stay in our grand luxury rooms and suites, or at our Grand Presidential Suite. Indulge yourself with a day at Spa and shop for finely curated Indian artefacts at Taj Khazana. Spectacular venues make the hotel the preferred choice for business meetings, social events and weddings.
    The wide array of fine-dining restaurants at Taj Bengal is the best in Kolkata. Enjoy robust North-West Indian, Punjabi and Bengali cuisines at the ambient Sonargaon, authentic Chinese at Chinoiserie, and Lebanese and Mediterranean at Souk. Our award-winning 24-hour coffee shop, The Hub serves an assortment of world cuisines; for an on-the-go craving, there is La Patisserie and Deli. The Junction Bar and Promenade Lounge are perennial favourites; and during winters, the Grill by the Pool is a special treat.
    Our signature Taj hospitality infuses your time at this hotel with warmth and the utmost in personal care, service and exclusivity. Be pampered by our world-renowned butlers and enjoy sumptuous in-room-dining experiences.
    Come, retreat into this tranquil paradise in the City of Joy.</string>
    <string name="hotel_5_name">The Gateway Hotel</string>
    <string name="hotel_5_address"> 1930, Rajdanga Main Road, Sector F, East Kolkata Twp, Kolkata, West Bengal 700107</string>
    <string name="hotel_5_description">Located on the arterial highway of Eastern Metropolitan Bypass, The Gateway Hotel Kolkata is a short distance from the city\'s IT hotspot. The 5 star property, built on 1.9 acres of prime real estate is also not far from other industrial commercial hubs, keeping you conveniently close to business. But it\'s not just our the location that keeps guests coming back again and again!The hotel provides a hassle free experience through  its 24X7 culture ensuring complete care and comfort for its guests.</string>
    <string name="restaurant_1_name">Bhojohori Manna</string>
    <string name="restaurant_1_address"> Shop No.9/18, Ekdalia Road, Gariahat, Kolkata, West Bengal 700019</string>
    <string name="restaurant_1_description">BHOJOHORI MANNA named after the famous Bengali song rendered by Manna Dey in the 70’s, is a family of restaurants with a difference. With the endeavour to promote the charming old world concept of a “pice hotel”, it serves a delightful variety of Bengali cuisine. The menu is handwritten every day on a whiteboard and are designed keeping in mind the season, the weather, the festivities and of course the raw material available on that given day.</string>
    <string name="restaurant_2_name">The Royal Bengal Tiger Cafe</string>
    <string name="restaurant_2_address"> 91, Golf Club Road, Rajendra Prasad Colony, Tollygunge, Kolkata, West Bengal 700033</string>
    <string name="restaurant_2_description">The Cafe is mainly themed around the national animal of India, the bengal tiger. With wooden ceiling, flooring and walls, the cafe will give you a Darjeeling cafe vibe, in the middle of the bustling heart of the city. Paintings and real life photographs of Tigers decorate the walls. The chairs are made of wood, but there are sofas also, for your comfort.It has a small outdoor seating, which is very cutely decorated with wooden tables and chairs and artificial plants. Though the centre of attraction is the giant life sized Bengal Tiger guarding its entrance.. :D The food tastes delicious.The staffs are very serious and dedicated to their work. Well dressed and well behaved. Very friendly and cooperative, but seriouly need to pace up their service.Here you will mainly find the crowd to be very young and relaxed and casual. Nothing very formal bout it. A very good place for some hangout with your buddies or your partner. It also serves breakfast, so after a morning jog around the golf green area, drop in at The Royal Bengal Tiger Cafe and have some delicious breakfast with authentic Darjeeling Tea. Very refreshing!!</string>
    <string name="restaurant_3_name">Rang de Basanti Dhaba</string>
    <string name="restaurant_3_address"> DN-37, Sector 5, Salt Lake City, Kolkata, West Bengal 700091</string>
</resources>